fix(table): fix table title align bug

--- a/src/components/table/style/index.less
+++ b/src/components/table/style/index.less
@@ -253,6 +253,18 @@
     }
   }
 
+  &-column-title-align-left {
+    justify-content: flex-start;
+  }
+
+  &-column-title-align-center {
+    justify-content: center;
+  }
+
+  &-column-title-align-right {
+    justify-content: flex-end;
+  }
+
   &-column-filter {
     height: 100%;
     margin-top: -6px;
